new file:   cardGames.js 	modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     src: url(/Web_fonts/stratosskyengweb-regular.woff);
   }
 
-.hard-level-page{
+.hard-level-elem{
     background-color: #C2F5FF;
     width: 480px;
     height: 459px;
