--- a/style.css
+++ b/style.css
@@ -73,3 +73,7 @@ input[type="radio"]:checked + label {
  color:orange   
 }
 
+.game-header{
+    display: flex;
+    justify-content: space-between;
+}
